--- a/jenkinsfile
+++ b/jenkinsfile
@@ -16,7 +16,7 @@ pipeline {
         stage('Deploy') {
             steps {
                 echo 'Deploying...'
-                sh 'echo "Deploy command would go here"'
+                sh 'echo "edit this jeevan"'
             }
         }
     }
